# stm32_pigweed

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  requirements-dev.txt
App/: CMakeLists.txt
App/inc/: app.hpp  bsp.hpp
App/src/: main.cpp
Chip/: CMakeLists.txt
Chip/STM32H743XX/: CMakeLists.txt  STM32H743XX.ioc
Chip/STM32H743XX/Core/Inc/: main.h
Chip/STM32H743XX/Core/Src/: main.c  stm32h7xx_hal_msp.c
Cmake/Opts/: Custom_build_opts.cmake
Cmake/Toolchain/: Arm-none-eabi-toolchain.cmake
Cmake/Utils/: app_conf.cmake  change_log.cmake  exe_conf.cmake  pre-commit.cmake
Cmake/Utils/scripts/: calk_crc.py
Lib/: CMakeLists.txt
Lib/FreeRTOS/: CMakeLists.txt
Lib/FreeRTOS/FreeRTOS_config/: FreeRTOSConfig.h
Lib/FreeRTOS/FreeRTOS_custom/: cmsis_os2.c
Lib/Pigweed/: CMakeLists.txt
Lib/logger/: CMakeLists.txt
Lib/logger/inc/: logger.h
Lib/logger/src/: print_target.c
Services/: CMakeLists.txt
